# chatix

./: .gitignore  Dockerfile  docker-compose.yml
app/: Pipfile  main.py  pyproject.toml
